@@ -695,13 +695,13 @@ L<https://github.com/michal-josef-spacek/Error-Pure-Output-ANSIColor>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2013-2022 Michal Špaček
+© 2013-2022 Michal Josef Špaček
 
 BSD 2-Clause License
 
