@@ -465,12 +465,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Error-Pure-Output-ANSIColor>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2013-2022 Michal Špaček
+    © 2013-2022 Michal Josef Špaček
 
     BSD 2-Clause License
 
